<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/labelPrzedmiot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/subject_label_content_description"
        android:text="@string/subject_label"
        app:layoutConstraintBottom_toBottomOf="@id/radioGroup"
        app:layoutConstraintStart_toStartOf="parent"
        app:layoutConstraintTop_toTopOf="@id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    <RadioButton
        android:id="@+id/radioButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grade_2"
        app:layout_constraintStart_toEndOf="@+id/labelPrzedmiot" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grade_3"
        app:layout_constraintStart_toEndOf="@+id/radioButton1"
        tools:layout_editor_absoluteY="0dp" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grade_4"
        app:layout_constraintStart_toEndOf="@+id/radioButton2"
        tools:layout_editor_absoluteY="0dp" />

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grade_5"
        app:layout_constraintStart_toEndOf="@+id/radioButton3"
        tools:layout_editor_absoluteY="0dp" />


</android.support.constraint.ConstraintLayout>